Added QLineEdit enabled / disabled background-color attributes.

--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -61,5 +61,13 @@ QProgressBar::chunk {
     border: 0px;
 }
 
+QLineEdit::enabled {
+    background-color: #FFFFFF;
+}
+
+QLineEdit::disabled {
+    background-color: #EDEDED;
+}
+
 
 
