--- a/ui/instrumentAttributes.ui
+++ b/ui/instrumentAttributes.ui
@@ -201,6 +201,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="Chan0CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="PickerButton0">
             <property name="minimumSize">
              <size>
@@ -253,6 +263,16 @@
             </property>
             <property name="maxLength">
              <number>7</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="Chan1CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -313,6 +333,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="Chan2CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="PickerButton2">
             <property name="minimumSize">
              <size>
@@ -365,6 +395,16 @@
             </property>
             <property name="maxLength">
              <number>7</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="Chan3CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -425,6 +465,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="Chan4CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="PickerButton4">
             <property name="minimumSize">
              <size>
@@ -477,6 +527,16 @@
             </property>
             <property name="maxLength">
              <number>7</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="Chan5CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -537,6 +597,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="Chan6CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="PickerButton6">
             <property name="minimumSize">
              <size>
@@ -593,6 +663,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="Chan7CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="PickerButton7">
             <property name="minimumSize">
              <size>
@@ -645,6 +725,16 @@
             </property>
             <property name="maxLength">
              <number>7</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="Chan8CheckBox">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
