--- a/ui/futurlecBaudrateTool.ui
+++ b/ui/futurlecBaudrateTool.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>93</height>
+    <width>576</width>
+    <height>118</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,6 +21,37 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QPushButton" name="FindInstButton">
+          <property name="text">
+           <string>Find Instrument</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="StatusLineEdit">
+          <property name="minimumSize">
+           <size>
+            <width>251</width>
+            <height>27</height>
+           </size>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Status </string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="1" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="label">
