--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -265,8 +265,8 @@ QToolBox::tab:selected { /* italicize selected tabs */
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>28</height>
+             <width>129</width>
+             <height>521</height>
             </rect>
            </property>
            <attribute name="label">
@@ -275,28 +275,28 @@ QToolBox::tab:selected { /* italicize selected tabs */
            <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
-              <x>0</x>
-              <y>0</y>
+              <x>1</x>
+              <y>1</y>
               <width>128</width>
-              <height>391</height>
+              <height>373</height>
              </rect>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_2">
-             <item>
+            <layout class="QGridLayout" name="gridLayout_5">
+             <item row="0" column="0">
               <widget class="QCheckBox" name="chartDecimateCheckBox">
                <property name="text">
                 <string>Decimate</string>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="1" column="0">
               <widget class="QCheckBox" name="chartAutoRangeCheckBox">
                <property name="text">
                 <string>AutoRange</string>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="2" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout">
                <item>
                 <widget class="QCheckBox" name="channel0colour">
@@ -326,7 +326,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="3" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <item>
                 <widget class="QCheckBox" name="channel1colour">
@@ -356,7 +356,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="4" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_3">
                <item>
                 <widget class="QCheckBox" name="channel2colour">
@@ -386,7 +386,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="5" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_4">
                <item>
                 <widget class="QCheckBox" name="channel3colour">
@@ -416,7 +416,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="6" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_5">
                <item>
                 <widget class="QCheckBox" name="channel4colour">
@@ -446,7 +446,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="7" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_6">
                <item>
                 <widget class="QCheckBox" name="channel5colour">
@@ -476,7 +476,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="8" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_7">
                <item>
                 <widget class="QCheckBox" name="channel6colour">
@@ -506,7 +506,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="9" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_8">
                <item>
                 <widget class="QCheckBox" name="channel7colour">
@@ -536,7 +536,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="10" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_9">
                <item>
                 <widget class="QCheckBox" name="channel8colour">
@@ -566,7 +566,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item>
+             <item row="11" column="0">
               <spacer name="verticalSpacer">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
