--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -272,31 +272,42 @@ QToolBox::tab:selected { /* italicize selected tabs */
            <attribute name="label">
             <string>Chart Control</string>
            </attribute>
-           <widget class="QWidget" name="layoutWidget">
+           <widget class="QWidget" name="">
             <property name="geometry">
              <rect>
-              <x>1</x>
-              <y>1</y>
-              <width>128</width>
-              <height>373</height>
+              <x>0</x>
+              <y>2</y>
+              <width>124</width>
+              <height>443</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="0" column="0">
-              <widget class="QCheckBox" name="chartDecimateCheckBox">
-               <property name="text">
-                <string>Decimate</string>
-               </property>
-              </widget>
+              <layout class="QVBoxLayout" name="verticalLayout_2">
+               <item>
+                <widget class="QCheckBox" name="chartDecimateCheckBox">
+                 <property name="text">
+                  <string>Decimate</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="chartAutoRangeCheckBox">
+                 <property name="text">
+                  <string>AutoRange</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="showLegend">
+                 <property name="text">
+                  <string>Show Legend</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
              <item row="1" column="0">
-              <widget class="QCheckBox" name="chartAutoRangeCheckBox">
-               <property name="text">
-                <string>AutoRange</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout">
                <item>
                 <widget class="QCheckBox" name="channel0colour">
@@ -332,7 +343,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="3" column="0">
+             <item row="2" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <item>
                 <widget class="QCheckBox" name="channel1colour">
@@ -368,7 +379,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="4" column="0">
+             <item row="3" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_3">
                <item>
                 <widget class="QCheckBox" name="channel2colour">
@@ -404,7 +415,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="5" column="0">
+             <item row="4" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_4">
                <item>
                 <widget class="QCheckBox" name="channel3colour">
@@ -440,7 +451,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="6" column="0">
+             <item row="5" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_5">
                <item>
                 <widget class="QCheckBox" name="channel4colour">
@@ -476,7 +487,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="7" column="0">
+             <item row="6" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_6">
                <item>
                 <widget class="QCheckBox" name="channel5colour">
@@ -512,7 +523,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="8" column="0">
+             <item row="7" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_7">
                <item>
                 <widget class="QCheckBox" name="channel6colour">
@@ -548,7 +559,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="9" column="0">
+             <item row="8" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_8">
                <item>
                 <widget class="QCheckBox" name="channel7colour">
@@ -584,7 +595,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="10" column="0">
+             <item row="9" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout_9">
                <item>
                 <widget class="QCheckBox" name="channel8colour">
@@ -620,7 +631,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </item>
               </layout>
              </item>
-             <item row="11" column="0">
+             <item row="10" column="0">
               <spacer name="verticalSpacer">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
@@ -660,7 +671,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
        <item row="0" column="0">
         <widget class="QWidget" name="mplwindow" native="true">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
