--- a/ui/configuration.ui
+++ b/ui/configuration.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>699</width>
-    <height>619</height>
+    <height>632</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -400,8 +400,14 @@
               </item>
               <item>
                <widget class="QSpinBox" name="LegendColSpinBox">
+                <property name="minimum">
+                 <number>1</number>
+                </property>
                 <property name="maximum">
-                 <number>4</number>
+                 <number>6</number>
+                </property>
+                <property name="singleStep">
+                 <number>1</number>
                 </property>
                </widget>
               </item>
